# Minecraft-Clone-OpenGL

./: .gitignore  CMakeLists.txt  README.md
dustbin/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexBuffer.cpp
include/: Camera.h  GLbuffers.h  IndexBuffer.h  Minecraft.h  Renderer.h  UI.h  VertexArray.h  VertexBuffer.h  Window.h  shader.h  textures.h
include/glad/: glad.h
res/: 2dFragmentShader.glsl  2dVertexShader.glsl  fragmentShader.glsl  shaders.glsl  vertexShader.glsl
shaders/: fs.txt  vs.txt
src/: Camera.cpp  GLbuffers.cpp  IndexBuffer.cpp  IndexBuffer.h  Minecraft.cpp  Renderer.cpp  UI.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  main.cpp  shader.cpp  textures.cpp
